Fixed image cropper modal scalability to effect only image cropper

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,6 +1,5 @@
 .modal-overlay {
   position: fixed;
-  inset: 0;
   top: 0;
   left: 0;
   right: 0;
@@ -17,12 +16,9 @@
   padding: 20px;
   border-radius: 8px;
   position: relative;
-  width: 80vw;
-  height: 80vh;
+  max-width: 90%;
+  max-height: 90%;
   overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .modal-close-button {
@@ -35,8 +31,22 @@
   cursor: pointer;
 }
 
+.modal-overlay[data-modal-type="image-cropper"] {
+  inset: 0;
+}
+
+.modal-overlay[data-modal-type="image-cropper"] .modal-content {
+  width: 80vw;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: none;
+  max-height: none;
+}
+
 @media (max-width: 767px) and (max-height: 270px){
-  .modal-content {
+  .modal-overlay[data-modal-type="image-cropper"] .modal-content {
     top: 70%;
     width: 90vw; 
     height: 60vh; 
@@ -44,7 +54,7 @@
 }
 
 @media (max-width: 767px) and (min-height: 271px) and (max-height: 450px){
-  .modal-content {
+  .modal-overlay[data-modal-type="image-cropper"] .modal-content {
     top: 40%;
     width: 90vw; 
     height: 70vh; 
@@ -52,15 +62,15 @@
 }
 
 @media (max-width: 767px) and (min-height: 451px) and (max-height: 720px) {
-  .modal-content {
+  .modal-overlay[data-modal-type="image-cropper"] .modal-content {
     top: 25%;
     width: 90vw; 
     height: 70vh; 
   }
 }
 
-@media (max-width: 767px) and (min-height: 721px) and (max-height: 960px) {
-  .modal-content {
+@media (max-width: 767px) and (min-height: 721px) and (max-height: 1150px) {
+  .modal-overlay[data-modal-type="image-cropper"] .modal-content {
     top: 15%;
     width: 90vw; 
     height: 70vh;
@@ -68,11 +78,20 @@
   }
 }
 
-@media (min-height: 961px) and (max-height: 1500px) {
-  .modal-content {
+@media (min-height: 1151px) and (max-height: 1500px) {
+  .modal-overlay[data-modal-type="image-cropper"] .modal-content {
     width: 90vw; 
     height: 70vh; 
     max-height: 600px;
     bottom: 10%;
+  }
+}
+
+@media (min-width: 768px) {
+  .modal-overlay[data-modal-type="image-cropper"] .modal-content {
+    width: 90vw; 
+    height: 70vh; 
+    max-width: 600px;
+    max-height: 600px;
   }
 }
